<resources>
    <string name="app_name">Battle Ships</string>
    <string name="score">View score</string>
    <string name="practice">vs bot</string>
    <string name="online">vs friend</string>
    <string name="sign_up_top_play_online">Sign up to play online!</string>
    <string name="active_list_item_title">%1$s vs. %2$s</string>
    <string name="username">Username</string>
    <string name="Intro">Intro image</string>
    <string name="settings">Settings</string>
    <string name="control_bridge">Control bridge</string>
    <string name="current_game">Current game</string>
    <string name="scores">Scores</string>
    <string name="save_username">Save</string>
    <string name="change_user_name">Change user name</string>
    <string name="start_the_war">start the war!</string>
    <string name="positioning_hint_board_preparation"><![CDATA[drag&drop to move, click to rotate]]></string>
    <string name="prepare_your_ships">PREPARE YOUR SHIPS</string>
    <string name="rules">Rules</string>


    <string-array name="staticgamedata">
        <item>"2020-03-15 T00:00:00Z me vs bot"</item>
        <item>"2020-03-15 T00:00:00Z me vs trump"</item>
        <item>"2020-03-14 T00:00:00Z me vs putin"</item>
        <item>"2020-01-07 T00:00:00Z me vs bot"</item>
        <item>"2020-01-07 T00:00:00Z me vs bot"</item>
        <item>"2020-01-07 T00:00:00Z me vs bot"</item>
        <item>"2020-01-07 T00:00:00Z me vs bot"</item>
        <item>"2020-01-07 T00:00:00Z me vs bot"</item>
        <item>"2020-01-07 T00:00:00Z me vs bot"</item>
        <item>"2020-01-07 T00:00:00Z me vs bot"</item>
        <item>"2020-01-07 T00:00:00Z me vs bot"</item>
        <item>"2020-01-07 T00:00:00Z me vs bot"</item>
        <item>"2020-01-07 T00:00:00Z me vs corona"</item>
    </string-array>

    <string-array name="staticscoredata">
        <item>"2020-03-15 me vs bot: 1:0"</item>
        <item>"2020-03-15 me vs bot: 0:1"</item>
        <item>"2020-03-15 me vs bot: 0:1"</item>
        <item>"2020-03-15 me vs bot: 1:0"</item>
        <item>"2020-03-15 me vs bot: 1:0"</item>
        <item>"2020-03-15 me vs bot: 1:0"</item>
    </string-array>

    <string name="rulesText">
        <![CDATA[
        <h1>Rules Battle Ship</h1>
        <h2>Lorem ipsum</h2>
        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
        invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
        sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
        kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
        sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
        et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
        amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
        sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
        kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
        sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
        et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
        amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
        sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
        kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
        sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
        et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
        amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
        sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
        kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
        sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
        et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
        amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
        consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto
        odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait
        nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
        nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
        ]]>
    </string>
    <string name="Rules">Rules</string>
    <string name="points_for_multiplayer_games">points for multiplayer games</string>
    <string name="points_for_bot_games">points for bot games</string>
    <string name="_0">0</string>
    <string name="sign_in">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <!--Strings view Activities-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_login">LOGIN</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_google">Sign up with Google</string>
    <string name="action_sign_up_facebook">Sign up with Facebook</string>
    <string name="action_login_google">Login with Google</string>
    <string name="action_login_facebook">Login with Facebook</string>

    <string name="btn_link_to_register">Not a member? <i><b>Sign up now!</b></i></string>
    <string name="btn_link_to_skip_login">Or <i><b>skip to play offline</b></i></string>
    <string name="btn_link_to_login">Already registered! <i><b>Login Me.</b></i></string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">OR</string>


</resources>
