<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <!-- <ImageView
        android:id="@+id/sonarImg"
        android:layout_width="200dp"
        android:layout_height="539dp"
        android:layout_margin="0dp"
        android:contentDescription="@string/Intro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sonar_transparent_small" /> -->

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/sonarImg"
        android:layout_width="200dp"
        android:layout_height="539dp"
        android:layout_margin="0dp"
        android:contentDescription="@string/Intro"
        android:src="@drawable/splash"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/username"
        app:layout_constraintBaseline_toBaselineOf="@+id/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="241dp"
        android:layout_height="37dp"
        android:layout_margin="16dp"
        android:autofillHints="@string/username"
        android:backgroundTint="@color/colorAccent"
        android:inputType="text"
        android:labelFor="@id/username"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/sonarImg"
        app:layout_constraintLeft_toRightOf="@id/usernameLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sonarImg"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train"
        app:layout_constraintEnd_toStartOf="@+id/train"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sonarImg" />

    <Button
        android:id="@+id/train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online"
        app:layout_constraintEnd_toStartOf="@+id/score"
        app:layout_constraintStart_toEndOf="@id/online"
        app:layout_constraintTop_toTopOf="@id/online" />

    <Button
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintLeft_toRightOf="@id/train"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/train" />


</androidx.constraintlayout.widget.ConstraintLayout>
