<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:id="@+id/intro"
    tools:context=".refactored.ui.auth.LoginActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <fragment
            android:id="@+id/gif_intro_container"
            android:name="battleships.esa.ffhs.ch.refactored.ui.main.GifFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="32dp"/>

        <LinearLayout
            android:id="@+id/layout_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@drawable/shape_card_view"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:hint="@string/prompt_email"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorAccent"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/prompt_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorAccent"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="onClickEmailLogin"
                android:background="@drawable/border_login_button"
                android:text="@string/action_login"
                android:textColor="@color/colorAccent"
                android:drawableLeft="@drawable/ic_login_variant_white_36dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_card_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/colorPrimary" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:background="@color/colorPrimary"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_sign_in_google"
            android:onClick="onClickGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:text="@string/continue_with_google"
            android:background="@drawable/border_login_brand_button"
            android:textColor="@color/colorAccent"
            android:drawableLeft="@drawable/ic_google"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickSignUpButton"
        android:id="@+id/text_view_sign_up"
        android:text="@string/btn_link_to_register"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>