<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="emailAuthModel"
            type="ch.ffhs.esa.battleships.business.auth.EmailAuthModel" />

        <variable
            name="emailAuthViewModel"
            type="ch.ffhs.esa.battleships.business.auth.EmailAuthViewModel" />

        <variable
            name="googleAuthViewModel"
            type="ch.ffhs.esa.battleships.business.auth.GoogleAuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/intro_image"
            android:layout_width="199dp"
            android:layout_height="184dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="36dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/Intro"
            android:scaleType="centerInside"
            android:src="@drawable/splash"
            app:layout_constraintBottom_toTopOf="@id/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/username"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintHorizontal_bias="1.0"

            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/edit_text_password"
                android:nextFocusForward="@+id/edit_text_password"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                app:colorOnSurface="@color/colorAccent"
                android:text="@={emailAuthModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toTopOf="@id/button_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:hintEnabled="true"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintHorizontal_bias="1.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/prompt_password"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="@={emailAuthModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_login_button"
            android:drawableLeft="@drawable/ic_baseline_launch_24"
            android:onClick="@{view -> emailAuthViewModel.signInWithEmailAndPassword(emailAuthModel)}"
            android:text="@string/action_login"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/sign_up_link"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/sign_up_link"
            android:layout_width="190dp"
            android:layout_height="21dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_boarder_login_button"
            android:text="@string/btn_link_to_register"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/separator"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <TextView
            android:id="@+id/skip_login_link"
            android:layout_width="140dp"
            android:layout_height="21dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_boarder_login_button"
            android:text="@string/btn_link_to_skip_login"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sign_up_link"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <View
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/or"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_link" />

        <TextView
            android:id="@+id/or"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/colorPrimary"
            android:translationY="-20dp"
            app:layout_constraintBottom_toTopOf="@id/separator"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login" />

        <Button
            android:id="@+id/button_sign_in_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/border_login_brand_button"
            android:drawableLeft="@drawable/ic_google"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
